--- a/pokedex/src/Pokecard.css
+++ b/pokedex/src/Pokecard.css
@@ -1,3 +1,17 @@
 .Pokecard {
-  border: 4px solid mediumpurple;
+  width: 250px;
+  padding: 10px;
+  margin: 1rem;
+  box-shadow: 7px 10px 12px -5px rgba(0,0,0,0.56);
+  text-align: center;
+  background: #fff;
+  border-radius: 3px;
+}
+
+.Pokecard-title {
+
+}
+
+.Pokecard-data {
+  font-size: 80%;
 }
