--- a/11_react_hangman/src/Hangman.css
+++ b/11_react_hangman/src/Hangman.css
@@ -31,6 +31,14 @@
   margin-top: 0;
 }
 
+#restart {
+  width: auto;
+  display: block;
+  margin: 0 auto 0 auto;
+  background: #f47d7f;
+  box-shadow: 0 6px #b12020;
+}
+
 .Hangman button {
   border: none;
   font-family: inherit;
@@ -40,15 +48,15 @@
   margin: 5px 2px 2px 2px;
   letter-spacing: 1px;
   outline: none;
-  background: #ffc107;
+  background: #c27df4;
   color: #fff;
-  box-shadow: 0 6px #ff9800;
+  box-shadow: 0 6px #8d20b1;
   border-radius: 5px;
   padding-top: 4px;
 }
 
 .Hangman button:hover {
-  background-color: #ff9800;
+  background-color: #8d20b1;
 }
 
 .Hangman button:disabled {
